update scala version to 2.12.4

--- a/src/main/twirl/example/hello.scala.html
+++ b/src/main/twirl/example/hello.scala.html
@@ -1,11 +1,11 @@
 @import example.Album
-@(items: Seq[Album])
+@(albums: Seq[Album])
 
 {
   "items" : [
-    @for(index <- 0 until items.length) {
-      { "name": "@items(index).name" }
-      @if(index < items.length - 1) { , }
+    @for(index <- albums.indices) {
+      { "name": "@albums(index).name" }
+      @if(index < albums.length - 1) { , }
     }
   ]
 }
